k8s-service-user/src/main/resources/k8s-Probe.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  labels:
    app: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: k8s-service-user:1.0.0
          readinessProbe: #就绪探针
            httpGet:
              path: /actuator/health #需要依赖spring-boot-starter-actuator
              port: 8080 #k8s内部端口
            initialDelaySeconds: 10 #等待3秒开始检查
          livenessProbe: #存活探针
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30 #等待10秒开始检查
            periodSeconds: 60 #每60秒检查一次
          resources:
            requests: #请求资源下限
              cpu: "100m"
              memory: "128Mi"
            limits:  #资源上限, 大于等于requests
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: user
  labels:
    app: user
    group: ylwq
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080  #后台pod的端口, 可以不填, 默认就是port的值
      nodePort: 30000 #实际对外暴露的端口
  selector:
    app: user #路由规则: 匹配pod中的labels标签
  type: NodePort
